--- a/Ffsti.Library.Tests/Ffsti.Library.Tests.csproj
+++ b/Ffsti.Library.Tests/Ffsti.Library.Tests.csproj
@@ -61,8 +61,8 @@
     <Compile Include="CepTest.cs" />
     <Compile Include="LogTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HashTests.cs" />
-    <Compile Include="CryptoTest.cs" />
+    <Compile Include="Base\HashTests.cs" />
+    <Compile Include="Base\CryptographyTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="NLog.config">
@@ -70,17 +70,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ffsti.Library.ConsultaCep\Ffsti.Library.ConsultaCep.csproj">
-      <Project>{453b8004-0e71-4b49-9453-c3dce4aa1515}</Project>
-      <Name>Ffsti.Library.ConsultaCep</Name>
+    <ProjectReference Include="..\Ffsti.Library.Base\Ffsti.Library.Base.csproj">
+      <Project>{D9C4343C-8525-4EC9-B3EE-A69624F741E3}</Project>
+      <Name>Ffsti.Library.Base</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Ffsti.Library.Database\Ffsti.Library.Database.csproj">
-      <Project>{cbceddce-a6f0-44a5-be0b-5ab144d1aa89}</Project>
-      <Name>Ffsti.Library.Database</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Ffsti.Library\Ffsti.Library.csproj">
-      <Project>{8916186a-85a1-4af4-8dcd-7bd042228284}</Project>
-      <Name>Ffsti.Library</Name>
+    <ProjectReference Include="..\Ffsti.Library.Cep\Ffsti.Library.Cep.csproj">
+      <Project>{A26F8F09-2A73-4EEE-9B85-8FAC83BD3792}</Project>
+      <Name>Ffsti.Library.Cep</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
