Ajuste em estrutura de pastas do projeto

--- a/Ffsti.Library.Tests/Ffsti.Library.Tests.csproj
+++ b/Ffsti.Library.Tests/Ffsti.Library.Tests.csproj
@@ -58,7 +58,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="CepTest.cs" />
+    <Compile Include="Cep\CepTest.cs" />
     <Compile Include="LogTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\HashTests.cs" />
