--- a/Ffsti.Library.Tests/Ffsti.Library.Tests.csproj
+++ b/Ffsti.Library.Tests/Ffsti.Library.Tests.csproj
@@ -37,9 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog, Version=3.1.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.4.4\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
@@ -59,7 +59,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Cep\CepTest.cs" />
-    <Compile Include="LogTest.cs" />
+    <Compile Include="Log\LogTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base\HashTests.cs" />
     <Compile Include="Base\CryptographyTest.cs" />
@@ -77,6 +77,10 @@
     <ProjectReference Include="..\Ffsti.Library.Cep\Ffsti.Library.Cep.csproj">
       <Project>{A26F8F09-2A73-4EEE-9B85-8FAC83BD3792}</Project>
       <Name>Ffsti.Library.Cep</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ffsti.Library.NLog\Ffsti.Library.NLog.csproj">
+      <Project>{a8271eb2-80db-41bb-9033-58388276a26d}</Project>
+      <Name>Ffsti.Library.NLog</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
